test/cli/test-context-configmap-mpol/patchedResource.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-deploy
  namespace: test-namespace
  labels:
    app: nginx
    environment: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
